<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cursos"
            android:title="@string/navigation_menu_cursos" />
        <item
            android:id="@+id/nav_menu_cursos_andamento"
            android:title="@string/navigation_menu_cursos_andamento" />
        <item
            android:id="@+id/nav_menu_cursos_espera"
            android:title="@string/navigation_menu_cursos_espera" />
        <item
            android:id="@+id/nav_menu_cursos_concluido"
            android:title="@string/navigation_menu_cursos_concluido" />
        <item
            android:id="@+id/nav_menu_language"
            android:title="@string/navigation_menu_languages" />
        <item
            android:id="@+id/nav_menu_perfil"
            android:title="@string/navigation_menu_perfil"
            />
        <item
            android:id="@+id/nav_menu_logout"
            android:title="@string/navigation_menu_logout"
            />
    </group>
</menu>


    <!--
    EXEMPLO PARA COLOCAR ÍCONE NAS OPÇÕES DO MENU
    android:icon="@drawable/ic_menu_gallery"-->