<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pi.fatec.azulapplication.LoginActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/login_textView_app_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_imageView_logo_azul"
            android:layout_centerHorizontal="true"
            android:text="@string/navigation_header_cursos_name"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="122dp" />

        <ImageView
            android:id="@+id/login_imageView_logo_azul"
            android:layout_width="280dp"
            android:layout_height="230dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="343dp"
            app:srcCompat="@drawable/ic_azul_brazilian_airlines_logo"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="-73dp" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtpass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:onClick="openCursosActivity"
            android:text="@string/login_button_login"
            android:textColor="@android:color/background_light"
            android:theme="@style/MyButton" />

        <EditText
            android:id="@+id/edtuserid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_textView_app_nome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/login_plainText_usuario"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/edtuserid"
            android:layout_below="@+id/edtuserid"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/login_passwordText_senha"
            android:inputType="textPassword" />

        <ProgressBar
            android:id="@+id/pbbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnlogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/pbbar"
            android:layout_marginTop="20dp"
            android:text="@string/login_plainText_help"
            android:textAlignment="center"
            android:textSize="18sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
