<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.02"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/listNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="4.11"
                android:text="Nome do Funcionario"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textStyle="bold"
                android:textSize="28sp"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/listmail"
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:text="@string/perfil_email"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                     />


                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Email@email.com"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@android:color/background_dark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/listsenha"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:text="@string/perfil_senha"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                     />


                <EditText
                    android:id="@+id/editSenha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="******"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@android:color/background_dark"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/listSenha2"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:text="@string/perfil_senhaconfirma"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                     />

                <EditText
                    android:id="@+id/editSenha2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="******"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@android:color/background_dark"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/listRegistr"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:text="@string/perfil_Registro"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                     />

                <TextView
                    android:id="@+id/txtRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="000000"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/listUsuario"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:text="@string/perfil_usuario"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                     />

                <TextView
                    android:id="@+id/txtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="usuário"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/listRegis"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:text="@string/perfil_cargo"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                     />

                <TextView
                    android:id="@+id/txtCargo"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="Cargo"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>